--- a/index.html
+++ b/index.html
@@ -5,14 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <div><img src="/images/spotify-logo.png" alt="spotify logo" /></div>
+      <div class="navbar">
+        <ul>
+          <li>Premium</li>
+          <li>Discover</li>
+          <li>Help</li>
+          <li>Download</li>
+        </ul>
+      </div>
+    </header>
+
+    <section class="concert">
+      <div>
+        <h1>Music for everyone.</h1>
+        <h3>
+          Spotify is now free on mobile, tablet and computer. Listen to the
+          right music, wherever you are.
+        </h3>
+      </div>
+    </section>
+
+    <section>
+      <h2>What’s on Spotify?</h2>
+      <article>
+        <img src="/images/music-icon.png" />
+        <h4>Millions of Songs</h4>
+        <p>There are millions of songs on Spotify</p>
+      </article>
+      <img src="/images/high-quality-icon.png" />
+      <h4>HD Music</h4>
+      <p>Listen to music as if you were listening live</p>
+      <article></article>
+      <article>
+        <img src="/images/devices-icon.png" />
+        <h4>Stream Everywhere</h4>
+        <p>
+          Stream music on your smartphone, tablet or computerStream music on
+          your smartphone, tablet or computer
+        </p>
+      </article>
+    </section>
+
+    <section>
+      <h5>It’s as yeezy as Kanye West.</h5>
+      <div>
+        <h6>Search</h6>
+        <p>Know what you want to listen to? Just search and hit play.</p>
+      </div>
+      <div>
+        <h6>Browse</h6>
+        <p>
+          Check out the latest charts, brand new releases and great playlists
+          for right now.
+        </p>
+      </div>
+      <div>
+        <h6>Discover</h6>
+        <p>
+          Enjoy new music every Monday with your own personal playlist. Or sit
+          back and enjoy Radio.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
