--- a/index.html
+++ b/index.html
@@ -7,71 +7,105 @@
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
     <header>
-      <div><img src="/images/spotify-logo.png" alt="spotify logo" /></div>
-      <div class="navbar">
-        <ul>
-          <li>Premium</li>
-          <li>Discover</li>
-          <li>Help</li>
-          <li>Download</li>
-        </ul>
+      <div>
+        <div><img src="/images/spotify-logo.png" alt="spotify logo" /></div>
+        <div class="navbar">
+          <ul>
+            <li>Premium</li>
+            <li>Discover</li>
+            <li>Help</li>
+            <li>Download</li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <section class="concert">
       <div>
-        <h1>Music for everyone.</h1>
+        <h1 class="concert-title">Music for everyone.</h1>
         <h3>
-          Spotify is now free on mobile, tablet and computer. Listen to the
-          right music, wherever you are.
+          Spotify is now free on mobile, tablet and computer. <br />
+          Listen to the right music, wherever you are.
         </h3>
       </div>
     </section>
 
-    <section>
-      <h2>What’s on Spotify?</h2>
-      <article>
-        <img src="/images/music-icon.png" />
-        <h4>Millions of Songs</h4>
-        <p>There are millions of songs on Spotify</p>
-      </article>
-      <img src="/images/high-quality-icon.png" />
-      <h4>HD Music</h4>
-      <p>Listen to music as if you were listening live</p>
-      <article></article>
-      <article>
-        <img src="/images/devices-icon.png" />
-        <h4>Stream Everywhere</h4>
-        <p>
-          Stream music on your smartphone, tablet or computerStream music on
-          your smartphone, tablet or computer
-        </p>
-      </article>
+    <section class="three-items">
+      <div>
+        <h2>What’s on Spotify?</h2>
+      </div>
+      <div class="three-items-content">
+        <div>
+          <article>
+            <img src="/images/music-icon.png" />
+            <h4>Millions of Songs</h4>
+            <p>
+              There are millions of <br />
+              songs on Spotify
+            </p>
+          </article>
+        </div>
+        <div>
+          <article>
+            <img src="/images/high-quality-icon.png" />
+            <h4>HD Music</h4>
+            <p>
+              Listen to music as if you <br />
+              were listening live
+            </p>
+          </article>
+        </div>
+        <div>
+          <article>
+            <img src="/images/devices-icon.png" />
+            <h4>Stream Everywhere</h4>
+            <p>
+              Stream music on your <br />
+              smartphone, tablet or <br />
+              computer
+            </p>
+          </article>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <h5>It’s as yeezy as Kanye West.</h5>
+    <section class="green-box">
       <div>
-        <h6>Search</h6>
-        <p>Know what you want to listen to? Just search and hit play.</p>
-      </div>
-      <div>
-        <h6>Browse</h6>
-        <p>
-          Check out the latest charts, brand new releases and great playlists
-          for right now.
-        </p>
-      </div>
-      <div>
-        <h6>Discover</h6>
-        <p>
-          Enjoy new music every Monday with your own personal playlist. Or sit
-          back and enjoy Radio.
-        </p>
+        <div class="yeezy">
+          <div>
+            <div>
+              <h5>It’s as yeezy as Kanye West.</h5>
+            </div>
+            <div>
+              <h6>Search</h6>
+              <p>Know what you want to listen to? Just search and hit play.</p>
+            </div>
+            <div>
+              <h6>Browse</h6>
+              <p>
+                Check out the latest charts, brand new releases and great
+                playlists for right now.
+              </p>
+            </div>
+            <div>
+              <h6>Discover</h6>
+              <p>
+                Enjoy new music every Monday with your own personal playlist. Or
+                sit back and enjoy Radio.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img src="/images/spotify-icon-white.png" class="logo" />
+        </div>
+        <div class="app">
+          <img src="/images/spotify-app.jpg" alt="Kanye-west-shuffle-play" />
+        </div>
       </div>
     </section>
   </body>
-  WHY WONT THIS PUSH
 </html>
